--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
             mateusmotaa/rotten-potatoes:latest
             mateusmotaa/rotten-potatoes:${{ github.run_number }}
   CD: 
+    needs: [CI]
     run-on: ubuntu-latest
     
     steps:
