--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
             mateusmotaa/rotten-potatoes:${{ github.run_number }}
   CD: 
     needs: [CI]
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     
     steps:
       - uses: actions/checkout@v2
