--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
-      - name: Kubernetes Set Context
+      - name: Kubernetes set context
         uses: Azure/k8s-set-context@v2
         with:
           method: kubeconfig
