--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,3 +44,9 @@ jobs:
           method: kubeconfig
           kubeconfig: ${{ secrets.K8S_KUBECONFIG }}
       
+      - name: Deploy to Kubernetes cluster
+        uses: Azure/k8s-deploy@v1.5
+        with:
+          image: mateusmotaa/rotten-potatoes:${{ github.run_number }}
+          manifests: | 
+            k8s/deployment.yaml
