--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -55,7 +55,7 @@ spec:
     spec:
       containers:
         - name: web
-          image: mateusmotaa/rotten-potatoes:v1
+          image: mateusmotaa/rotten-potatoes:latest
           ports:
             - containerPort: 5000
           env:
